src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part4__cleanup_confirm_dialog.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog ticke││  Ctrl+B    - New backlog ticket                     │
│                   ╭ Close Unlinked PR ───────────────────╮                   │
│                   │                                      │                   │
│                   │ Close PR #42 and delete branch?      │t                  │
│                   │                                      │                   │
│                   │ [Enter]  Close with reason           │                   │
│                   │ [d]  Close directly                  │                   │
│                   │ [Esc]  Cancel                        │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   ╰──────────────────────────────────────╯                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
