src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part4__merge_prompt_dialog.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog t╭ Merge Strategy ──────────────────────╮                   │
│                   │                                      │                   │
│                   │ Merge PR?                            │                   │
│                   │                                      │t                  │
│                   │ [s]  Squash (default)                │                   │
│                   │ [m]  Merge                           │                   │
│                   │ [p]  Poll (mergequeue)               │                   │
│                   │ [Esc]  Cancel                        │                   │
│                   │                                      │                   │
│                   │                                      │                   │
│                   ╰──────────────────────────────────────╯                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
