src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part4__rework_prompt_dialog.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 24)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (0) ───────┐┌ Session ────────────────────────────────────────────┐
│                       ││                                                     │
│  No work items.       ││  Welcome to workbridge                              │
│                       ││                                                     │
│  Ctrl+N: quick start  ││  Ctrl+N    - Quick start session                    │
│  Ctrl+B: backlog ticke││  Ctrl+B    - New backlog ticket                     │
│                   ╭ Rework Reason ───────────────────────╮                   │
│                   │                                      │                   │
│                   │ Why is rework needed?                │t                  │
│                   │                                      │                   │
│                   │ needs more error handling            │                   │
│                   │                                      │                   │
│                   │ Enter: Submit   Esc: Cancel          │                   │
│                   │                                      │                   │
│                   ╰──────────────────────────────────────╯                   │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
│                       ││                                                     │
└───────────────────────┘└─────────────────────────────────────────────────────┘
