src/ui/snapshot_tests/snapshots/workbridge__ui__snapshot_tests__part4__sticky_header_shows_correct_group_when_multiple_groups.snap
---
source: src/ui.rs
expression: "render(&mut app, 80, 12)"
---
  List    Board    Dashboard                                   Tab: switch view
┌ Work Items (8) ───────┐┌ Session ────────────────────────────────────────────┐
│  BACKLOGGED (0) (5)   ││                                                     │
│  [BL] Backlog 3       ││  Backlog 5                                          │
│  branch-b3 [no wt]    ││                                                     │
│  [BL] Backlog 4       ││  Status      Backlog                                │
│  branch-b4 [no wt]    ││  Backend     Local file                             │
│> [BL] Backlog 5       █│  Repo        /repo/b5/0                             │
│  branch-b5 [no wt]    █│  Branch      branch-b5                              │
│                       █│  Worktree    (none)                                 │
└───────────────────────┘└─────────────────────────────────────────────────────┘
Backlog 5 | [Backlog] | 0
